Kursovaya/compiling_error.txt
In file included from /home/dima/github/OOP/Kursovaya/BigNumber.cpp:1:0,
                 from /home/dima/github/OOP/Kursovaya/START.cpp:2:
/home/dima/github/OOP/Kursovaya/BigNumber.h:10:37: error: expected ‘;’ at end of member declaration
   string Bolshe(string s1, string s2)
                                     ^
/home/dima/github/OOP/Kursovaya/BigNumber.h:11:37: error: expected ‘;’ at end of member declaration
   string ifZero(string s1, string s2)
                                     ^
